fix navbar overflow

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,6 @@
   background-color: rgb(248, 248, 248);
   height: 70vh;
   box-shadow: 0 2px 4px gray;
-  height: 70vh;
   border-radius: 50vh;
   transition: all 0.6s;
 }
